text align fixed, better

--- a/team955.org/css/customStyles.css
+++ b/team955.org/css/customStyles.css
@@ -291,6 +291,7 @@ body {
 	-moz-column-count: 1;
 	-webkit-column-count: 1;
 	width: 90%;
+	text-align: center;
   }
 }
 
